--- a/mernproject/src/App.css
+++ b/mernproject/src/App.css
@@ -1,31 +1,130 @@
-*{
+* {
   padding-left: 0%;
   margin: 0%;
   box-sizing: border-box;
 }
-body, html{
+body,
+html {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
 }
-/* nav bar */
-.nav-ul{
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  background-color: rgb(190, 136, 93);
-  font-size: 120%;
-  font-weight: 500;
 
+/*custom*/
+/* nav bar */
+.container {
+  max-width: 90%;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 1rem;
 }
-.nav-ul .nav-link{
-  padding: 1%;
-  color: #000;
+.navigation {
+  height: 60px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding: 0.5rem 0rem;
+  background-color: #fff;
+  color: black;
+  box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
 }
-.nav-link:hover{
-  color: #000 !important;
+
+.brand-name {
+  text-decoration: none;
+  color: black;
+  font-size: 1.3rem;
+  margin-left: 1rem;
 }
+.navigation-menu {
+  margin-left: auto;
+}
+
+.navigation-menu ul {
+  display: flex;
+  padding: 0;
+}
+.navigation-menu li {
+  list-style-type: none;
+  margin: 0 1rem;
+}
+.navigation-menu li a {
+  text-decoration: none;
+  display: block;
+  width: 100%;
+}
+
+.hamburger {
+  border: 0;
+  height: 40px;
+  width: 40px;
+  padding: 0.5rem;
+  border-radius: 50%;
+  background-color: #dadada;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+  position: absolute;
+  top: 50%;
+  right: 25px;
+  transform: translateY(-50%);
+  display: none;
+}
+.hamburger:hover {
+  background-color: #dadada;
+}
+
+@media screen and (max-width: 768px) {
+  .hamburger {
+    display: block;
+  }
+}
+@media screen and (max-width: 768px) {
+  .navigation-menu ul {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navigation-menu ul {
+    position: absolute;
+    top: 60px;
+    left: 0;
+    flex-direction: column;
+    width: 100%;
+    box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
+    background-color: rgb(255, 255, 255);
+    border-top: 1px solid black;
+  }
+  .navigation-menu li {
+    text-align: center;
+    width: 100%;
+    margin: 0;
+  }
+  .navigation-menu li a {
+    color: black;
+    width: 100%;
+    padding: 1.5rem 0;
+  }
+  .navigation-menu li:hover {
+    background-color: #eee;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navigation-menu ul {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navigation-menu.expanded ul {
+    display: block;
+  }
+}
+
 /* footer */
-.footer{
+.footer {
   position: absolute;
   bottom: 0%;
   text-align: center;
@@ -35,9 +134,36 @@ body, html{
   background-color: rgba(71, 71, 17, 0.33);
 }
 /* signup */
-.forms{
+.forms {
   padding: 0% 40%;
 }
-.form-control{
+.form-control {
   padding: 1% !important;
+}
+/*Add product */
+.form-control {
+  margin-top: 0.7%;
+}
+.input-valid {
+  color: crimson;
+  font-size: 85%;
+}
+@media screen and (max-width: 768px) {
+  .form-control {
+    margin-top: 0.5%;
+  }
+}
+/* Product list*/
+.product-list {
+  text-align: center;
+  margin-top: 50px;
+}
+.product-list ul {
+  margin: 0%;
+}
+.product-list ul li {
+  display: inline-block;
+  border: 1px solid black;
+  padding: 5px;
+  width: 150px;
 }
