--- a/mernproject/src/App.css
+++ b/mernproject/src/App.css
@@ -126,10 +126,11 @@ html {
 
 /* footer */
 .footer {
-  position: absolute;
-  bottom: 0%;
-  text-align: center;
+  position: fixed; /* Fix the footer position at the bottom */
+  left: 0;
+  bottom: 0;
   width: 100%;
+  text-align: center;
   font-size: 120%;
   padding: 1%;
   background-color: rgba(71, 71, 17, 0.33);
@@ -140,6 +141,10 @@ html {
 }
 .form-control {
   padding: 1% !important;
+}
+.form{
+  height: 100%;
+  padding-bottom: 10%;
 }
 /*Add product */
 .form-control {
@@ -179,6 +184,6 @@ html {
 
 /* image upload */
 .img-display-after {
-  height: 20%;
-  width: 20%
+  height: 20vh;
+  width: 20vh;
 }
